fix(header): show nav overflow triggers until correct breakpoint
THe nav links are hidden until the large breakpoint, so the overflow
triggers should be shown until then.

--- a/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
+++ b/projects/angular/src/layout/nav/_responsive-nav.clarity.scss
@@ -197,7 +197,7 @@
     }
   }
 
-  @media screen and (max-width: map-get($clr-grid-breakpoints, md)) {
+  @media screen and (max-width: map-get($clr-grid-breakpoints, lg)) {
     .main-container {
       .header-hamburger-trigger,
       .header-overflow-trigger {
